--- a/src/styles/scrolly.css
+++ b/src/styles/scrolly.css
@@ -5,6 +5,9 @@
   min-height: 100vh;
   display: flex;
   border: 8px solid navy ;
+  margin: 0;
+  padding: 0;
+  gap: 0;
 }
 
 .sticky-figure {
@@ -19,6 +22,8 @@
   overflow: hidden;
   z-index: 1;
   border: 4px solid red;
+  margin: 0;
+  padding: 0;
 }
 
 .visual-container {
@@ -63,6 +68,7 @@
   background: #ffffff;
   z-index: 10;
   width: 50%;
+  margin: 0;
   margin-left: 50%;
   border: 4px solid orange;
 }
