--- a/public/global.css
+++ b/public/global.css
@@ -6,6 +6,7 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 body {
@@ -19,6 +20,7 @@ body {
 	font-size: 21px;
 	line-height: 1.5;
 	word-wrap: break-word;
+	max-width: 100vw; /* Ensure body doesn't exceed viewport width */
 }
 
 /* COMPONENTS */
