--- a/public/global.css
+++ b/public/global.css
@@ -10,7 +10,7 @@ html, body {
 
 body {
 	color: #222;
-	background-color: #fff;
+	background-color: #d8e6ed;
 	margin: 0;
 	padding: 0;
 	-webkit-box-sizing: border-box;
